# case-machine-learning-engineer-pleno

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  makefile  model.pkl  model_dummy.py  pyproject.toml
github/workflows/: release.yaml
notebook/: Notebook.ipynb  perguntas.ipynb
src/adapters/repositories/: exceptions.py
src/adapters/repositories/model_repository/: disk_repository.py  s3_repository.py
src/adapters/repositories/prediction_repository/: mongomock_repository.py
src/drivers/rest/: main.py
src/drivers/rest/routers/: model_history.py  model_load.py  model_predict.py
src/models/: model_definitions.py
src/ports/repositories/: model_repository.py  prediction_repository.py
src/use_cases/: model_load_use_case.py  model_predict_use_case.py
tests/: test_app.py
tests/adapters/repositories/model_repository/: test_disk_repository.py  test_s3_repository.py
tests/adapters/repositories/prediction_repository/: test_inmemory_prediction_repository.py
tests/drivers/rest/: test_model_endpoints.py
tests/use_cases/: test_model_load_use_case.py  test_model_predict_use_case.py
